# neat-car-ai

./: .gitignore  CMakeLists.txt  README.md
libs/SDL2_gfx/x64/: SDL2_gfx.lib
libs/SDL2_gfx/x86/: SDL2_gfx.lib
src/: car.cpp  car.h  car.hpp  main.cpp
src/NEAT/: neat.cpp  neat.h  neat.hpp
src/NEAT/network/: genome.cpp  genome.h  genome.hpp  network.cpp  network.h  network.hpp
src/NEAT/network/component/: connection.cpp  connection.h  connection.hpp  node.cpp  node.h  node.hpp
src/NEAT/utilities/: crossover.cpp  crossover.h  crossover.hpp  debug.cpp  debug.hpp  evolver.cpp  evolver.h  evolver.hpp  mutator.cpp  mutator.h  mutator.hpp  speciator.cpp  speciator.h  speciator.hpp  util.cpp  util.h  util.hpp
src/math/: spline.h  spline.hpp  vector2d.cpp  vector2d.h
